# java3dsoftwarerenderer

./: .gitignore  Readme.md
src/: Bitmap.java  CGfx.c  CGfx.h  CMakeLists.txt  Display.java  DrawHead.java  GfxMath.java  Main.java  Main_FlatBottomTriangleTest.java  Main_FlatTopTriangleTest.java  Main_SignedAreaTest.java  RenderContext.java  display.cpp  display.h  main.cpp  swrast_GfxNative.c  swrast_GfxNative.h  vertices.properties
src/swrast/: Bitmap.java  Display.java  DrawHead.java  GfxMath.java  GfxNative.java  IOUtils.java  RenderContext.java
src/test/: Main_FlatBottomTriangleSlopeTest.java  Main_FlatBottomTriangleTest.java  Main_FlatTopTriangleSlopeTest.java  Main_FlatTopTriangleTest.java  Main_NativeTest.java  Main_ObjReaderTest.java  Main_PerspectiveTest.java  Main_SignedAreaTest.java  Main_TriangleRotateTest.java  Main_TriangleSpanMethodTest.java  Main_TriangleTest.java  Main_TriangleTestSlope.java  Main_WindowlessTest.java  texture.properties
